kustomizations/webapp/service_app.yaml
# Source: app-template/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
    app: app
  annotations: {}
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: app
